# self-healing-data-pipeline

./: .gitignore  README.md  app.py  graph.py  main.py  pyproject.toml  requirements.txt  utils.py
data/: healed_output.csv  sample.csv
docs/: company_rules.txt
